Fix 401 Unauthorized by adding public root controller, refining SecurityConfig and JwtAuthFilter